--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -665,6 +665,9 @@ video {
 .w-12{
 	width: 3rem;
 }
+.w-max{
+	width: max-content;
+}
 .w-48{
 	width: 12rem;
 }
@@ -703,6 +706,9 @@ video {
 }
 .flex-nowrap{
 	flex-wrap: nowrap;
+}
+.items-end{
+	align-items: flex-end;
 }
 .items-center{
 	align-items: center;
