--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -569,6 +569,12 @@ video {
 .mr-6{
 	margin-right: 1.5rem;
 }
+.mt-10{
+	margin-top: 2.5rem;
+}
+.mb-10{
+	margin-bottom: 2.5rem;
+}
 .-mt-24{
 	margin-top: -6rem;
 }
@@ -578,9 +584,6 @@ video {
 .mb-2{
 	margin-bottom: 0.5rem;
 }
-.mt-10{
-	margin-top: 2.5rem;
-}
 .-mt-8{
 	margin-top: -2rem;
 }
@@ -589,9 +592,6 @@ video {
 }
 .mt-3{
 	margin-top: 0.75rem;
-}
-.mb-10{
-	margin-bottom: 2.5rem;
 }
 .mt-2{
 	margin-top: 0.5rem;
@@ -667,6 +667,9 @@ video {
 }
 .w-max{
 	width: max-content;
+}
+.w-96{
+	width: 24rem;
 }
 .w-48{
 	width: 12rem;
@@ -831,6 +834,9 @@ video {
 .px-0{
 	padding-left: 0px;
 	padding-right: 0px;
+}
+.pt-10{
+	padding-top: 2.5rem;
 }
 .pt-8{
 	padding-top: 2rem;
