--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -569,9 +569,6 @@ video {
 .mr-6{
 	margin-right: 1.5rem;
 }
-.mt-10{
-	margin-top: 2.5rem;
-}
 .mb-10{
 	margin-bottom: 2.5rem;
 }
@@ -583,6 +580,9 @@ video {
 }
 .mb-2{
 	margin-bottom: 0.5rem;
+}
+.mt-10{
+	margin-top: 2.5rem;
 }
 .-mt-8{
 	margin-top: -2rem;
@@ -873,6 +873,10 @@ video {
 .text-xs{
 	font-size: 0.75rem;
 	line-height: 1rem;
+}
+.text-3xl{
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .text-xl{
 	font-size: 1.25rem;
