--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -13,4 +13,4 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-@import '@material-tailwind/react/tailwind.css';
+/* @import '@material-tailwind/react/tailwind.css'; */
