--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -758,6 +758,9 @@ video {
 .border-2{
 	border-width: 2px;
 }
+.border{
+	border-width: 1px;
+}
 .border-b{
 	border-bottom-width: 1px;
 }
@@ -775,6 +778,10 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
+.border-gray-300{
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
 .bg-gray-100{
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -785,6 +792,10 @@ video {
 .bg-white{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-gray-50{
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 .bg-gradient-to-tr{
 	background-image: linear-gradient(to top right, var(--tw-gradient-stops));
@@ -798,6 +809,12 @@ video {
 }
 .p-4{
 	padding: 1rem;
+}
+.p-2\.5{
+	padding: 0.625rem;
+}
+.p-2{
+	padding: 0.5rem;
 }
 .py-6{
 	padding-top: 1.5rem;
@@ -2479,6 +2496,14 @@ video {
 .hover\:text-gray-900:hover{
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.focus\:border-blue-500:focus{
+	--tw-border-opacity: 1;
+	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
+}
+.focus\:ring-blue-500:focus{
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(59, 130, 246, var(--tw-ring-opacity));
 }
 @media (min-width: 768px){
 	.md\:left-0{
